--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
+FastGaussQuadrature = "0.4"
 julia = "1"
 
 [extras]
