--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,3 +31,5 @@ test_script:
 on_success:
   - echo "%JL_CODECOV_SCRIPT%"
   - C:\julia\bin\julia -e "%JL_CODECOV_SCRIPT%"
+- name: Julia TagBot
+  uses: JuliaRegistries/TagBot@v1.10.0
