--- a/Project.toml
+++ b/Project.toml
@@ -24,44 +24,19 @@ VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-
-MATLAB = "0.8"
-#=======
 Combinatorics = "1"
-#=======
 DataFrames = "1"
-#=======
-
-FastGaussQuadrature = "0.4"
-#=======
-
-TensorOperations = "3"
-#=======
-
-LowRankApprox = "0.5"
-#=======
-
-TSVD = "0.4"
-#=======
-
 FFTW = "1"
-#=======
-
+FastGaussQuadrature = "0.4, 0.5"
 Kronecker = "0.5"
-#=======
-
-Revise = "3"
-#=======
-
-VegaLite = "2"
-#=======
-
-XLSX = "0.8"
-#=======
+LowRankApprox = "0.5"
+MATLAB = "0.8"
 Parameters = "0.12"
-
-
-
+Revise = "3"
+TSVD = "0.4"
+TensorOperations = "3"
+VegaLite = "2"
+XLSX = "0.8"
 julia = "1"
 
 [extras]
